---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: sql
---
CREATE TABLE "posts_temp" ( "id" integer NOT NULL, "user_id" integer, PRIMARY KEY ("id") )
INSERT INTO "posts_temp" ("id", "user_id") SELECT "id", "user_id" FROM "posts"
DROP TABLE "posts"
ALTER TABLE "posts_temp" RENAME TO "posts"
